--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>学成在线</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 <body>
     <!-- 头部区域 -->
